--- a/ovtlyr/tutorials.html
+++ b/ovtlyr/tutorials.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>OVTLYR | Index & Sectors</title>
+<title>OVTLYR | Tutorials</title>
 <meta name="description" content="Turning Investor Behavior into Stock Market Success" />
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
@@ -81,7 +81,7 @@ if (localStorage.getItem('darkMode') === "on") {
             </div>
             <div class="sidebar__caption caption-sm">Menu</div>
             <div class="sidebar__menu">
-              <div class="side_dropdown arrow_drop active">
+              <div class="side_dropdown arrow_drop">
                 <a class="sidebar__item" href="stock-detail.html">
                   <div class="sidebar__icon">
                     <img src="images/index-sectors.svg" alt="Dashboard" />
@@ -152,7 +152,7 @@ if (localStorage.getItem('darkMode') === "on") {
                 <span><a href="activity.html">Activity</a></span>
                 <!-- <span><a href="notification.html">Notification Management</a></span> -->
               </div>
-              <div class="side_dropdown arrow_drop dropdown_btn">
+              <div class="side_dropdown arrow_drop dropdown_btn active">
                 <p></p>
                 <a class="sidebar__item" href="contact.html">
                   <div class="sidebar__icon">
@@ -161,7 +161,7 @@ if (localStorage.getItem('darkMode') === "on") {
                   <div class="sidebar__text">Resources</div>
                 </a>
                 <span><a href="contact.html">Support</a></span>
-                <span><a href="tutorials.html">Tutorials</a></span>
+                <span class="active"><a href="tutorials.html">Tutorials</a></span>
                 <span><a href="https://ovtlyr.com/blog" target="_blank">Blog</a></span>
               </div>
               <div class="side_dropdown theme_switchBtn">
@@ -228,11 +228,68 @@ if (localStorage.getItem('darkMode') === "on") {
         </div>
       </div>
       <div class="dashboard_cont">
-        <div class="empty_stock">
-          <h3>Page Not Found</h3>
-          <img src="images/empty-stock.svg" class="white_img" alt="Empty Stock" />
-          <img src="images/empty-stock2.svg" class="black_img" alt="Empty Stock" />
-          <p>Stock/ETF you are looking for is not found.</p>
+        <div class="contactUs_sec1 tutorial_sec">
+          <h1>Tutorials</h1>
+          <div class="tutorial_list">
+            <ul>
+              <li>
+                <a href="https://youtu.be/tQbVP4rTTFo?si=7muUal6QFnXLp4LS" target="_blank">Watch Video<img src="images/video-icon.svg" alt="Video Icon" /></a>
+                <p>Index & Sectors</p>
+              </li>
+              <li>
+                <a href="https://youtu.be/iwlNxn0ctvM?si=BdB9wqe8Qv3ICp2r" target="_blank">Watch Video<img src="images/video-icon.svg" alt="Video Icon" /></a>
+                <p>Buy & Sell Signals</p>
+              </li>
+              <li>
+                <a href="https://youtu.be/LHzKc982tXg?si=CMO06acjDfOhPXy7" target="_blank">Watch Video<img src="images/video-icon.svg" alt="Video Icon" /></a>
+                <p>Heatmap Charts</p>
+              </li>
+              <li>
+                <a href="https://youtu.be/UuEHMwe1viI?si=gIfeNgmmnjneEg9C" target="_blank">Watch Video<img src="images/video-icon.svg" alt="Video Icon" /></a>
+                <p>Uptrend & Downtrend Indicators</p>
+              </li>
+              <li>
+                <a href="https://youtu.be/fNgYW0fy9eQ?si=MNfiZ0CZX2c8pmUD" target="_blank">Watch Video<img src="images/video-icon.svg" alt="Video Icon" /></a>
+                <p>Price Trajectory Oscillator</p>
+              </li>
+              <li>
+                <a href="https://youtu.be/qTFQMsq8pA4?si=rccTe2gkMT5OseZI" target="_blank">Watch Video<img src="images/video-icon.svg" alt="Video Icon" /></a>
+                <p>Performance Summary</p>
+              </li>
+              <li>
+                <a href="https://youtu.be/R3139OABNO4?si=Pu-vjy78XP5Qj5RE" target="_blank">Watch Video<img src="images/video-icon.svg" alt="Video Icon" /></a>
+                <p>Directional Volatility Histogram</p>
+              </li>
+              <li>
+                <a href="https://youtu.be/AuU2YIj4AEY?si=TuvGdvxCQnSSCOG3" target="_blank">Watch Video<img src="images/video-icon.svg" alt="Video Icon" /></a>
+                <p>Constituent Map</p>
+              </li>
+              <li>
+                <a href="https://youtu.be/ja9TlIVE35A?si=jqpytRQl1hw8KOzR" target="_blank">Watch Video<img src="images/video-icon.svg" alt="Video Icon" /></a>
+                <p>Favorites List</p>
+              </li>
+              <li>
+                <a href="https://youtu.be/38g-XWcTNyg?si=_Ihw5B0v6huXSd8w" target="_blank">Watch Video<img src="images/video-icon.svg" alt="Video Icon" /></a>
+                <p>Bull & Bear List</p>
+              </li>
+              <li>
+                <a href="https://youtu.be/XEhd4YV3-co?si=mhucg6II1Y3qkNhh" target="_blank">Watch Video<img src="images/video-icon.svg" alt="Video Icon" /></a>
+                <p>Discord</p>
+              </li>
+              <li>
+                <a href="https://youtu.be/tBq3vuJQvWQ?si=Bac2KtF0_BGsJa89" target="_blank">Watch Video<img src="images/video-icon.svg" alt="Video Icon" /></a>
+                <p>Settings</p>
+              </li>
+              <li>
+                <a href="https://youtu.be/AqrlxgYCU2c?si=_TVxQ15ehZgZZvw1" target="_blank">Watch Video<img src="images/video-icon.svg" alt="Video Icon" /></a>
+                <p>Notifications</p>
+              </li>
+              <li>
+                <a href="https://youtu.be/K6XFk0akEEc?si=UFhVLmwYSMhAeWij" target="_blank">Watch Video<img src="images/video-icon.svg" alt="Video Icon" /></a>
+                <p>Support</p>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
