--- a/ovtlyr/notification.html
+++ b/ovtlyr/notification.html
@@ -101,11 +101,31 @@ if (localStorage.getItem('darkMode') === "on") {
                   <div class="sidebar__icon">
                     <img src="images/notification.svg" alt="Notification" />
                   </div>
-                  <div class="sidebar__text">Notification</div>
-                  <span class="noti_count">80</span>
+                  <div class="sidebar__text">Notifications</div>
+                  <span class="noti_count">99+</span>
                 </a>
               </div>
-              <div class="side_dropdown arrow_drop">
+              <div class="side_dropdown">
+                <a class="sidebar__item" href="https://discord.gg/DjgmSrdxUY" target="_blank">
+                  <div class="sidebar__icon">
+                    <img src="images/discord.svg" alt="Notification" />
+                  </div>
+                  <div class="sidebar__text">Discord</div>
+                </a>
+              </div>
+              <div class="side_dropdown arrow_drop dropdown_btn">
+                <p></p>
+                <a class="sidebar__item" href="affiliate-info.html">
+                  <div class="sidebar__icon">
+                    <img src="images/earn.svg" alt="Settings" />
+                  </div>
+                  <div class="sidebar__text">Earn</div>
+                </a>
+                <span><a href="affiliate-info.html">Affiliate Info</a></span>
+                <span><a href="promoter.html">FirstPromoter</a></span>
+              </div>
+              <div class="side_dropdown arrow_drop dropdown_btn">
+                <p></p>
                 <a class="sidebar__item" href="subscription.html">
                   <div class="sidebar__icon">
                     <img src="images/setting.svg" alt="Settings" />
@@ -114,24 +134,19 @@ if (localStorage.getItem('darkMode') === "on") {
                 </a>
                 <span><a href="subscription.html">Subscription</a></span>
                 <span><a href="activity.html">Activity</a></span>
-                <!-- <span class="active"><a href="notification.html">Notification Management</a></span> -->
+                <!-- <span><a href="notification.html">Notification Management</a></span> -->
               </div>
-              <div class="side_dropdown">
-                <a class="sidebar__item" href="become-a-referer.html">
-                  <div class="sidebar__icon">
-                    <img src="images/referer.svg" alt="Referer" />
-                  </div>
-                  <div class="sidebar__text">Become a Referer</div>
-                </a>
-              </div>
-              <div class="side_dropdown arrow_drop">
+              <div class="side_dropdown arrow_drop dropdown_btn">
+                <p></p>
                 <a class="sidebar__item" href="contact.html">
                   <div class="sidebar__icon">
                     <img src="images/support.svg" alt="Support" />
                   </div>
-                  <div class="sidebar__text">Support</div>
+                  <div class="sidebar__text">Resources</div>
                 </a>
-                <span class="active">Contact</span>
+                <span><a href="contact.html">Support</a></span>
+                <span><a href="tutorials.html">Tutorials</a></span>
+                <span><a href="https://ovtlyr.com/blog" target="_blank">Blog</a></span>
               </div>
               <div class="side_dropdown theme_switchBtn">
                 <div class="sidebar__item mb-0">
@@ -158,7 +173,7 @@ if (localStorage.getItem('darkMode') === "on") {
         </div>
         <div class="sidebar__profile">
           <div class="sidebar__details">
-            <a class="sidebar__link" href="#">
+            <a class="sidebar__link" href="profile.html">
               <div class="sidebar__icon">
                 <img src="images/user.svg" alt="Profile" />
               </div>
@@ -210,13 +225,13 @@ if (localStorage.getItem('darkMode') === "on") {
               </div>
             </div>
           </div>
-          <!-- <div class="settings_head2">
+          <div class="settings_head2">
             <div class="settings_tabs">
               <ul class="nav nav-tabs" id="myTab" role="sattingstab">
                 <li class="nav-item" role="stocklist">
-                  <a href="notification.html" class="nav-link active" id="notification-tab" data-bs-target="#notificationtab" type="button" role="tab" aria-controls="notificationtab" aria-selected="true">
-                  <show-desk>Notification Management</show-desk>
-                  <show-mob>Notifications</show-mob>
+                  <a href="javascript:void(0)" class="nav-link active" id="notification-tab" data-bs-target="#notificationtab" type="button" role="tab" aria-controls="notificationtab" aria-selected="true">
+                    <show-desk>Notification Management</show-desk>
+                    <show-mob>Notifications</show-mob>
                   </a>
                 </li>
                 <li class="nav-item" role="sattingstab">
@@ -227,7 +242,7 @@ if (localStorage.getItem('darkMode') === "on") {
                 </li>
               </ul>
             </div>
-          </div> -->
+          </div>
         </div>
         <div class="settings_dash">
           <div class="tab-content" id="myTabContent">
@@ -270,9 +285,9 @@ if (localStorage.getItem('darkMode') === "on") {
                 </ul>
               </div>
               <div class="subscription_b1 notifiLogs">
-                <h6>Notifications</h6>
+                <h6>Notifications <button type="button" class="video_icon" data-bs-toggle="modal" data-bs-target="#notifications"><img src="images/video-icon.svg" alt="Video"></button></h6>
                 <div class="notifiLog_table">
-                  <div class="notifi_blur">
+                  <div class="notifi_blur" style="display: none;">
                     <img src="images/noti-blur-light-img.jpg" class="white_img" alt="Blur Image">
                     <img src="images/noti-blur-dark-img.jpg" class="black_img" alt="Blur Image">
                     <div class="noti_topTxt">
@@ -280,7 +295,7 @@ if (localStorage.getItem('darkMode') === "on") {
                       <a href="#">Upgrade</a>
                     </div>
                   </div>
-                  <div class="table_scroll vertical_scroll horizontal_scroll" style="display: none;">
+                  <div class="table_scroll vertical_scroll horizontal_scroll">
                     <table class="table notiLog__table ovtlyr_table">
                       <thead>
                         <tr class="ovtlyr__row_head">
@@ -302,17 +317,22 @@ if (localStorage.getItem('darkMode') === "on") {
                         </tr>
                         <tr class="ovtlyr__row">
                           <td><p>Sep 05, 2023 | 05:00 AM</p></td>
-                          <td><p class="downside_stock">Recovery</p></td>
+                          <td><p class="downtrend_stock">Downtrend</p></td>
                           <td><p><a href="https://ovtlyr.com/stocks-etfs/AAPL">AAPL</a> lorem, ipsum dolor sit amet consectet.</p></td>
                         </tr>
                         <tr class="ovtlyr__row">
                           <td><p>Sep 05, 2023 | 05:00 AM</p></td>
-                          <td><p>Buy</p></td>
+                          <td><p class="buy_stock">Buy</p></td>
                           <td><p><a href="https://ovtlyr.com/stocks-etfs/NVDA">NVDA</a> eligendi laboriosam delectus odio asperiores.</p></td>
                         </tr>
                         <tr class="ovtlyr__row">
                           <td><p>Sep 05, 2023 | 05:00 AM</p></td>
-                          <td><p class="buy_stock">Down Cycle</p></td>
+                          <td><p class="sell_stock">Sell</p></td>
+                          <td><p><a href="https://ovtlyr.com/stocks-etfs/NVDA">NVDA</a> eligendi laboriosam delectus odio asperiores.</p></td>
+                        </tr>
+                        <tr class="ovtlyr__row">
+                          <td><p>Sep 05, 2023 | 05:00 AM</p></td>
+                          <td><p class="uptrend_stock">Uptrend</p></td>
                           <td><p><a href="https://ovtlyr.com/stocks-etfs/AAPL">AAPL</a> lorem, ipsum dolor sit amet consectet.</p></td> 
                         </tr>
                       </tbody>
@@ -367,6 +387,20 @@ if (localStorage.getItem('darkMode') === "on") {
             </div>
           </div>
         </div>
+        <!--======== NOTIFICATIONS VIDEO POPUP BEGIN ========-->
+        <div class="modal upgrade_popup watchVideo fade" id="notifications" tabindex="-1" aria-labelledby="notifications_modalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-body">
+                <button type="button" class="close_btn" data-bs-dismiss="modal" aria-label="Close"><span class="material-icons">close</span></button>
+                <div class="modal_body">
+                  <iframe src="https://www.youtube.com/embed/AqrlxgYCU2c?si=oMnzHwVizTtPcfmj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--======== NOTIFICATIONS VIDEO POPUP END =========-->
         <!--======== UPGRADE POPUP BEGIN ========-->
         <div class="modal upgrade_popup fade" id="upgrade_modal" tabindex="-1" aria-labelledby="upgrade_modalLabel" aria-hidden="true">
           <div class="modal-dialog">
@@ -394,6 +428,33 @@ if (localStorage.getItem('darkMode') === "on") {
 <script src="js/jquery.min.js"></script>
 <script src="js/magnific-popup-svg4-app.js"></script>
 <script src="js/bootstrap.bundle.min.js"></script>
+<!--==== SIDEBAR DROPDOWN OPEN START ====-->
+<script>
+  $(document).ready(function(){
+    $('.dropdown_btn p').on('click', function(e){
+      $(this).parent().toggleClass('active');
+    });
+  });
+</script>
+<!--==== SIDEBAR DROPDOWN OPEN END ====-->
+<!--==== STOP MODAL PLAYING START ====-->
+<script>
+  $(document).ready(function(){
+    /* Get iframe src attribute value i.e. YouTube video url and store it in a variable */
+    var url1 = $("#notifications iframe").attr('src');
+      
+    /* Assign empty url value to the iframe src attribute when modal hide, which stop the video playing */
+    $("#notifications").on('hide.bs.modal', function(){
+        $("#notifications iframe").attr('src', '');
+    });
+    
+    /* Assign the initially stored url back to the iframe src attribute when modal is displayed again */
+    $("#notifications").on('show.bs.modal', function(){
+        $("#notifications iframe").attr('src', url1);
+    });
+  });
+</script>
+<!--===== STOP MODAL PLAYING END =====-->
 <script>
 document.createElement('show-desk' , 'show-mob');
 </script>
