--- a/ovtlyr/profile.html
+++ b/ovtlyr/profile.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>OVTLYR | Index & Sectors</title>
+<title>OVTLYR | Profile</title>
 <meta name="description" content="Turning Investor Behavior into Stock Market Success" />
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
@@ -81,7 +81,7 @@ if (localStorage.getItem('darkMode') === "on") {
             </div>
             <div class="sidebar__caption caption-sm">Menu</div>
             <div class="sidebar__menu">
-              <div class="side_dropdown arrow_drop active">
+              <div class="side_dropdown arrow_drop">
                 <a class="sidebar__item" href="stock-detail.html">
                   <div class="sidebar__icon">
                     <img src="images/index-sectors.svg" alt="Dashboard" />
@@ -152,7 +152,7 @@ if (localStorage.getItem('darkMode') === "on") {
                 <span><a href="activity.html">Activity</a></span>
                 <!-- <span><a href="notification.html">Notification Management</a></span> -->
               </div>
-              <div class="side_dropdown arrow_drop dropdown_btn">
+              <div class="side_dropdown arrow_drop dropdown_btn active">
                 <p></p>
                 <a class="sidebar__item" href="contact.html">
                   <div class="sidebar__icon">
@@ -160,7 +160,7 @@ if (localStorage.getItem('darkMode') === "on") {
                   </div>
                   <div class="sidebar__text">Resources</div>
                 </a>
-                <span><a href="contact.html">Support</a></span>
+                <span class="active"><a href="contact.html">Support</a></span>
                 <span><a href="tutorials.html">Tutorials</a></span>
                 <span><a href="https://ovtlyr.com/blog" target="_blank">Blog</a></span>
               </div>
@@ -228,11 +228,84 @@ if (localStorage.getItem('darkMode') === "on") {
         </div>
       </div>
       <div class="dashboard_cont">
-        <div class="empty_stock">
-          <h3>Page Not Found</h3>
-          <img src="images/empty-stock.svg" class="white_img" alt="Empty Stock" />
-          <img src="images/empty-stock2.svg" class="black_img" alt="Empty Stock" />
-          <p>Stock/ETF you are looking for is not found.</p>
+        <div class="contactUs_sec1">
+          <h3>My Profile</h3>
+          <div class="top_box mb-3 mb-md-4 profileSec_0">
+            <h4>Personal Information <button type="button">Edit<span class="material-symbols-outlined">stylus</span></button></h4>
+            <div class="account_fields">
+              <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-12">
+                  <div class="form_field mb-md-0">
+                    <label>Name</label>
+                    <input type="text" name="name" value="Rafiqur Rahman" readonly />
+                  </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 col-12">
+                  <div class="form_field mb-0">
+                    <label>Email</label>
+                    <input type="text" name="email" value="rafiqurrahman51@gmail.com" readonly />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="top_box profileSec_0">
+            <h4>Adress  <button type="button">Edit<span class="material-symbols-outlined">stylus</span></button></h4>
+            <div class="account_fields">
+              <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-12">
+                  <div class="form_field">
+                    <label>Address</label>
+                    <input type="text" name="adress" value="" />
+                  </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 col-12">
+                  <div class="form_field">
+                    <label>City</label>
+                    <input type="text" name="city" value="" />
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-12">
+                  <div class="form_field">
+                    <label>State</label>
+                    <select>
+                      <option disabled="" selected="">- Select -</option>
+                      <option>State 1</option>
+                      <option>State 2</option>
+                      <option>State 3</option>
+                      <option>State 4</option>
+                    </select>
+                  </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 col-12">
+                  <div class="form_field">
+                    <label>Zip Code</label>
+                    <input type="number" name="zipcode" value="" />
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-12">
+                  <div class="form_field">
+                    <label>Country</label>
+                    <select>
+                      <option disabled="" selected="">- Select -</option>
+                      <option>Country 1</option>
+                      <option>Country 2</option>
+                      <option>Country 3</option>
+                      <option>Country 4</option>
+                    </select>
+                  </div>
+                </div>
+              </div>
+              <div class="captcha_contact"></div>
+              <div class="login_buttons">
+                <button type="button">Save Changes</button>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
