--- a/ovtlyr/promoter.html
+++ b/ovtlyr/promoter.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>OVTLYR | Index & Sectors</title>
+<title>OVTLYR | Promoter</title>
 <meta name="description" content="Turning Investor Behavior into Stock Market Success" />
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
@@ -13,6 +13,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 <link rel="stylesheet" href="css/bootstrap.min.css" />
 <link rel="stylesheet" href="css/style.css" />
+<link rel="stylesheet" href="css/fonts.css" />
 <script>
 var viewportmeta = document.querySelector('meta[name="viewport"]');
 if(viewportmeta) {
@@ -81,7 +82,7 @@ if (localStorage.getItem('darkMode') === "on") {
             </div>
             <div class="sidebar__caption caption-sm">Menu</div>
             <div class="sidebar__menu">
-              <div class="side_dropdown arrow_drop active">
+              <div class="side_dropdown arrow_drop">
                 <a class="sidebar__item" href="stock-detail.html">
                   <div class="sidebar__icon">
                     <img src="images/index-sectors.svg" alt="Dashboard" />
@@ -129,16 +130,16 @@ if (localStorage.getItem('darkMode') === "on") {
                   <div class="sidebar__text">Discord</div>
                 </a>
               </div>
-              <div class="side_dropdown arrow_drop dropdown_btn">
+              <div class="side_dropdown arrow_drop dropdown_btn active">
                 <p></p>
                 <a class="sidebar__item" href="affiliate-info.html">
                   <div class="sidebar__icon">
-                    <img src="images/earn.svg" alt="Settings" />
+                    <img src="images/earn.svg" alt="Earn" />
                   </div>
                   <div class="sidebar__text">Earn</div>
                 </a>
                 <span><a href="affiliate-info.html">Affiliate Info</a></span>
-                <span><a href="promoter.html">FirstPromoter</a></span>
+                <span class="active"><a href="promoter.html">FirstPromoter</a></span>
               </div>
               <div class="side_dropdown arrow_drop dropdown_btn">
                 <p></p>
@@ -152,6 +153,14 @@ if (localStorage.getItem('darkMode') === "on") {
                 <span><a href="activity.html">Activity</a></span>
                 <!-- <span><a href="notification.html">Notification Management</a></span> -->
               </div>
+              <!-- <div class="side_dropdown">
+                <a class="sidebar__item " href="promoter.html">
+                  <div class="sidebar__icon">
+                    <img src="images/referer.svg" alt="Referer" />
+                  </div>
+                  <div class="sidebar__text">Promoter</div>
+                </a>
+              </div> -->
               <div class="side_dropdown arrow_drop dropdown_btn">
                 <p></p>
                 <a class="sidebar__item" href="contact.html">
@@ -228,11 +237,8 @@ if (localStorage.getItem('darkMode') === "on") {
         </div>
       </div>
       <div class="dashboard_cont">
-        <div class="empty_stock">
-          <h3>Page Not Found</h3>
-          <img src="images/empty-stock.svg" class="white_img" alt="Empty Stock" />
-          <img src="images/empty-stock2.svg" class="black_img" alt="Empty Stock" />
-          <p>Stock/ETF you are looking for is not found.</p>
+        <div class="referral_sec">
+          <iframe height="850px" width="100%" frameborder="0" src="https://promoter.ovtlyr.com"></iframe>
         </div>
       </div>
     </div>
