--- a/ovtlyr/settings.html
+++ b/ovtlyr/settings.html
@@ -101,37 +101,52 @@ if (localStorage.getItem('darkMode') === "on") {
                   <div class="sidebar__icon">
                     <img src="images/notification.svg" alt="Notification" />
                   </div>
-                  <div class="sidebar__text">Notification</div>
-                  <span class="noti_count">99</span>
+                  <div class="sidebar__text">Notifications</div>
+                  <span class="noti_count">99+</span>
                 </a>
               </div>
-              <div class="side_dropdown arrow_drop active">
+              <div class="side_dropdown">
+                <a class="sidebar__item" href="https://discord.gg/DjgmSrdxUY" target="_blank">
+                  <div class="sidebar__icon">
+                    <img src="images/discord.svg" alt="Notification" />
+                  </div>
+                  <div class="sidebar__text">Discord</div>
+                </a>
+              </div>
+              <div class="side_dropdown arrow_drop dropdown_btn">
+                <p></p>
+                <a class="sidebar__item" href="affiliate-info.html">
+                  <div class="sidebar__icon">
+                    <img src="images/earn.svg" alt="Settings" />
+                  </div>
+                  <div class="sidebar__text">Earn</div>
+                </a>
+                <span><a href="affiliate-info.html">Affiliate Info</a></span>
+                <span><a href="promoter.html">FirstPromoter</a></span>
+              </div>
+              <div class="side_dropdown arrow_drop dropdown_btn active">
+                <p></p>
                 <a class="sidebar__item" href="subscription.html">
                   <div class="sidebar__icon">
                     <img src="images/setting.svg" alt="Settings" />
                   </div>
                   <div class="sidebar__text">Settings</div>
                 </a>
-                <span><a href="subscription.html">Subscription</a></span>
+                <span class="active"><a href="subscription.html">Subscription</a></span>
                 <span><a href="activity.html">Activity</a></span>
                 <!-- <span><a href="notification.html">Notification Management</a></span> -->
               </div>
-              <div class="side_dropdown">
-                <a class="sidebar__item" href="become-a-referer.html">
-                  <div class="sidebar__icon">
-                    <img src="images/referer.svg" alt="Referer" />
-                  </div>
-                  <div class="sidebar__text">Become a Referer</div>
-                </a>
-              </div>
-              <div class="side_dropdown arrow_drop">
+              <div class="side_dropdown arrow_drop dropdown_btn">
+                <p></p>
                 <a class="sidebar__item" href="contact.html">
                   <div class="sidebar__icon">
                     <img src="images/support.svg" alt="Support" />
                   </div>
-                  <div class="sidebar__text">Support</div>
+                  <div class="sidebar__text">Resources</div>
                 </a>
-                <span class="active">Contact</span>
+                <span><a href="contact.html">Support</a></span>
+                <span><a href="tutorials.html">Tutorials</a></span>
+                <span><a href="https://ovtlyr.com/blog" target="_blank">Blog</a></span>
               </div>
               <div class="side_dropdown theme_switchBtn">
                 <div class="sidebar__item mb-0">
@@ -158,7 +173,7 @@ if (localStorage.getItem('darkMode') === "on") {
         </div>
         <div class="sidebar__profile">
           <div class="sidebar__details">
-            <a class="sidebar__link" href="#">
+            <a class="sidebar__link" href="profile.html">
               <div class="sidebar__icon">
                 <img src="images/user.svg" alt="Profile" />
               </div>
@@ -213,11 +228,17 @@ if (localStorage.getItem('darkMode') === "on") {
           <div class="settings_head2">
             <div class="settings_tabs">
               <ul class="nav nav-tabs" id="myTab" role="sattingstab">
+                <li class="nav-item" role="stocklist">
+                  <a href="notification.html" class="nav-link" id="notification-tab" data-bs-target="#notificationtab" type="button" role="tab" aria-controls="notificationtab" aria-selected="true">
+                    <show-desk>Notification Management</show-desk>
+                    <show-mob>Notifications</show-mob>
+                  </a>
+                </li>
                 <li class="nav-item" role="sattingstab">
-                  <button class="nav-link active" id="subscription-tab" data-bs-toggle="tab" data-bs-target="#subscriptiontab" type="button" role="tab" aria-controls="subscriptiontab" aria-selected="false">Subscription</button>
+                  <a href="javascript:void(0);" class="nav-link active" id="subscription-tab" data-bs-target="#subscriptiontab" type="button" role="tab" aria-controls="subscriptiontab" aria-selected="false">Subscription</a>
                 </li>
                 <li class="nav-item" role="activitytab">
-                  <button class="nav-link" id="activity-tab" data-bs-toggle="tab" data-bs-target="#activitytab" type="button" role="tab" aria-controls="activitytab" aria-selected="false">Activity</button>
+                  <a href="activity.html" class="nav-link" id="activity-tab" data-bs-target="#activitytab" type="button" role="tab" aria-controls="activitytab" aria-selected="false">Activity</a>
                 </li>
               </ul>
             </div>
@@ -228,7 +249,7 @@ if (localStorage.getItem('darkMode') === "on") {
             <div class="tab-pane fade show active" id="subscriptiontab" role="tabpanel" aria-labelledby="subscription-tab">
               <div class="subscription_box">
                 <div class="subscription_b1">
-                  <h6>Plan</h6>
+                  <h6>Plan <button type="button" class="video_icon" data-bs-toggle="modal" data-bs-target="#settings"><img src="images/video-icon.svg" alt="Video"></button></h6>
                   <div class="plan_boxes">
                     <div class="plan_boxes1 blue_box">
                       <div class="check_icon">
@@ -260,7 +281,7 @@ if (localStorage.getItem('darkMode') === "on") {
                       </div>
                       <div class="serial3">
                         <div class="serial31">
-                          <a href="#" class="white_btn">Change Plan</a>
+                          <a href="#" class="white_btn" data-bs-toggle="modal" data-bs-target="#coupon_modal">Change Plan</a>
                         </div>
                         <div class="serial32">
                           <p>Expiration date <b>23/03/23</b></p>
@@ -356,6 +377,25 @@ if (localStorage.getItem('darkMode') === "on") {
                           </ul>
                         </div>
                       </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="subscription_b1">
+                  <h6>Apply Coupon</h6>
+                  <div class="coupon_sec">
+                    <div class="coupon_div1">
+                      <input type="text" placeholder="Have a coupon code? Apply here" />
+                      <button type="button">Apply</button>
+                    </div>
+                    <div class="coupon_div1 coupon_div2">
+                      <div class="appl_div">
+                        <span class="material-symbols-outlined">check_circle</span>
+                        <div class="appl_div2">
+                          <h6><span>OVTLYR30</span> applied</h6>
+                          <p>-$30.00 (30% off)</p>
+                        </div>
+                      </div>
+                      <button type="button">Remove</button>
                     </div>
                   </div>
                 </div>
@@ -493,6 +533,41 @@ if (localStorage.getItem('darkMode') === "on") {
                   </div>
                 </div>
               </div>
+              <!--======== APPLY COUPON POPUP BEGIN ========-->
+              <div class="modal coupon_popup fade" id="coupon_modal" tabindex="-1" aria-labelledby="coupon_modalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-body">
+                      <button type="button" class="close_btn" data-bs-dismiss="modal" aria-label="Close"><span class="material-icons">close</span></button>
+                      <div class="modal_body">
+                        <h5>Apply Coupon</h5>
+                        <div class="coupon_sec">
+                          <div class="coupon_div1">
+                            <input type="text" placeholder="Have a coupon code? Apply here">
+                            <button type="button">Apply</button>
+                          </div>
+                          <p class="error">You entered an invalid coupon code. Please check the code and try again!</p>
+                          <div class="coupon_div1 coupon_div2">
+                            <div class="appl_div">
+                              <span class="material-symbols-outlined">check_circle</span>
+                              <div class="appl_div2">
+                                <h6><span>OVTLYR30</span> applied</h6>
+                                <p>-$30.00 (30% off)</p>
+                              </div>
+                            </div>
+                            <button type="button">Remove</button>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="modal_btns">
+                        <button type="button" class="border_btn" data-bs-dismiss="modal" aria-label="Close">Skip</button>
+                        <button type="button" class="filled_btn" data-bs-dismiss="modal" aria-label="Close">Continue</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!--========= APPLY COUPON POPUP END =========-->
             </div>
             <div class="tab-pane fade" id="activitytab" role="tabpanel" aria-labelledby="activity-tab">
               <div class="activity_box border_box">
@@ -580,6 +655,20 @@ if (localStorage.getItem('darkMode') === "on") {
             </div>
           </div>
         </div>
+        <!--======== SETTINGS VIDEO POPUP BEGIN ========-->
+        <div class="modal upgrade_popup watchVideo fade" id="settings" tabindex="-1" aria-labelledby="settings_modalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-body">
+                <button type="button" class="close_btn" data-bs-dismiss="modal" aria-label="Close"><span class="material-icons">close</span></button>
+                <div class="modal_body">
+                  <iframe src="https://www.youtube.com/embed/tBq3vuJQvWQ?si=MEs4pR_Wq1EBmUWr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--======== SETTINGS VIDEO POPUP END =========-->
       </div>
     </div>
   </div>
@@ -588,6 +677,33 @@ if (localStorage.getItem('darkMode') === "on") {
 <script src="js/jquery.min.js"></script>
 <script src="js/magnific-popup-svg4-app.js"></script>
 <script src="js/bootstrap.bundle.min.js"></script>
+<!--==== SIDEBAR DROPDOWN OPEN START ====-->
+<script>
+  $(document).ready(function(){
+    $('.dropdown_btn p').on('click', function(e){
+      $(this).parent().toggleClass('active');
+    });
+  });
+</script>
+<!--==== SIDEBAR DROPDOWN OPEN END ====-->
+<!--==== STOP MODAL PLAYING START ====-->
+<script>
+  $(document).ready(function(){
+    /* Get iframe src attribute value i.e. YouTube video url and store it in a variable */
+    var url1 = $("#settings iframe").attr('src');
+      
+    /* Assign empty url value to the iframe src attribute when modal hide, which stop the video playing */
+    $("#settings").on('hide.bs.modal', function(){
+        $("#settings iframe").attr('src', '');
+    });
+    
+    /* Assign the initially stored url back to the iframe src attribute when modal is displayed again */
+    $("#settings").on('show.bs.modal', function(){
+        $("#settings iframe").attr('src', url1);
+    });
+  });
+</script>
+<!--===== STOP MODAL PLAYING END =====-->
 <script>
 $('.select_drop').click(function (evt) {
     evt.stopPropagation();
